<resources>
    <string name="app_name">Journal</string>
    <string name="about">About</string>
    <string name="about_toast">This app is made as an assignment for the minor Programmeren.</string>
    <string name="entry_title">Placeholder Title</string>
    <string name="entry_date">2018–01-01 00:00:00</string>
    <string name="entry_mood">placeholder mood</string>
    <string name="input_submit">Submit</string>
    <string name="input_title">Title</string>
    <string name="input_field">Enter your journal entry here</string>
    <string name="detail_message">Placeholder message</string>
    <string name="happy_face">Happy</string>
    <string name="neutral_face">Neutral</string>
    <string name="sad_face">Sad</string>
    <string name="angry_face">Angry</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="resetDb">Empty Journal</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="confirm_toast">Please confirm that you want to clear your Journal</string>
    <string name="clear_toast">Your Journal is cleared!</string>
    <string name="wrong_toast">Oops! Something went wrong :(</string>
    <string name="back">back</string>
    <string name="mood_image">Mood Image</string>
</resources>
