<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/moodImage"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginBottom="8dp"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="@+id/entryMood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/neutral"
        android:contentDescription="@string/mood_image" />

    <TextView
        android:id="@+id/entryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/entry_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/moodImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/entryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/entry_date"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Time.Media"
        app:layout_constraintStart_toStartOf="@+id/entryTitle"
        app:layout_constraintTop_toBottomOf="@+id/entryTitle" />

    <TextView
        android:id="@+id/entryMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_mood"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/entryDate"
        app:layout_constraintTop_toBottomOf="@+id/entryDate" />

</android.support.constraint.ConstraintLayout>